// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. lead one full width slice 1`] = `
<View>
  <View>
    <View>
      <Text>
        ROYALS
      </Text>
    </View>
    <ArticleFlags
      flags={
        Array [
          "NEW",
        ]
      }
    />
    <Text
      accessibilityRole="heading"
      aria-level="3"
    >
      Prince Philip ‘could be prosecuted’ over car crash
    </Text>
  </View>
  <View>
    <Image
      aspectRatio={1.7777777777777777}
      uri="https://img/someImage"
    />
  </View>
</View>
`;

exports[`2. lead one and one slice 1`] = `
<View>
  <View>
    <View>
      <View>
        <View>
          <View>
            <Text>
              ROYALS
            </Text>
          </View>
          <ArticleFlags
            flags={
              Array [
                "NEW",
              ]
            }
          />
          <Text
            accessibilityRole="heading"
            aria-level="3"
          >
            Prince Philip ‘could be prosecuted’ over car crash
          </Text>
        </View>
        <View>
          <Image
            aspectRatio={1.7777777777777777}
            uri="https://img/someImage"
          />
        </View>
      </View>
    </View>
  </View>
  <View>
    <View>
      <View>
        <View>
          <View>
            <Text>
              CYBER CRIME
            </Text>
          </View>
          <ArticleFlags
            flags={
              Array [
                "UPDATED",
              ]
            }
          />
          <Text
            accessibilityRole="heading"
            aria-level="3"
          >
            GCHQ gives girls free cyber-classes to tackle gender gap
          </Text>
        </View>
        <Text>
          <Text>
            
            GCHQ will give free cyber-classes to hundreds of girls in an attempt to boost diversity in the tech industry.
          </Text>
          <Text>
             
            The intelligence
            ...
          </Text>
        </Text>
      </View>
    </View>
  </View>
</View>
`;
